[project]
name = "libcalc"  # Required
version = "0.0.1"  # Required
description = "A sample Python project"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
  {name = "A. Random Developer", email = "author@example.com" } # Optional
]
maintainers = [
  {name = "A. Great Maintainer", email = "maintainer@example.com" } # Optional
]
dependencies = [ # Optional
  "peppercorn"
]

[project.optional-dependencies] # Optional
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]  # Optional
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"

[project.scripts]  # Optional
sample = "sample:main"

[tool.setuptools]
package-data = {"sample" = ["*.dat"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
